# play

./: .gitignore  README.md  config.example.py  file1.py  file2.py  file3.py  file4.py  file5.py  mongo.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: labeler.yaml  labeller.yaml
.github/workflows/: labeler.yaml  status-checks.yaml
play-subdir/: subfile1.py  subfile2.py
