[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "play"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

entegywrapper = "^7.2.2"
pydantic = "^2.7.0"
pymongo = "^4.6.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pylint = "*"
